--- a/html/home/index.html
+++ b/html/home/index.html
@@ -102,9 +102,9 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <ul class="social-icons">
                         <!-- Brings to guthub repo -->
-                        <li><a class="dribbble" href="#"><i class="fa fa-github"></i></a></li>
+                        <li><a title="github" class="github" href="#"><i class="fa fa-github"></i></a></li>
                         <!-- Brings to a list of our linkedin profiles -->
-                        <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a title="linkedin" class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
