--- a/html/home/index.html
+++ b/html/home/index.html
@@ -8,7 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
-<body style="background-color: #26272b;">
+<body style="background-color: #EFE3C2;">
     <!-- // -->
     <!-- ? Navbar ? -->
     <header>
@@ -49,7 +49,18 @@
     <!-- // -->
     <!-- ? Body ? -->
     <main>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="jumbotron">
+                        <h1>Welcome to our site!</h1>
+                        <p class="lead">This
+                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">site</a> is a work in progress.</p>
+                        <p><a class="btn btn-primary btn-lg" href="../../html/about/index.html" role="button">Learn more</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- // -->
 
