`Refactor navbar layout and styles across multiple files`

--- a/html/home/index.html
+++ b/html/home/index.html
@@ -12,35 +12,37 @@
     <!-- // -->
     <!-- ? Navbar ? -->
     <header>
-        <!-- ? Top Nav - Flex Space Between ? -->
-        <div class="top-nav">
-            <!-- ! Logo ! -->
-            <div class="nav-logo">
-                <img src="" alt="">
+        <div>
+            <!-- ? Top Nav - Flex Space Between ? -->
+            <div class="top-nav">
+                <!-- ! Logo ! -->
+                <div class="nav-logo">
+                    <img src="" alt="">
+                </div>
+                <!-- ! My Account ! -->
+                <div class="nav-item">
+                    <a href="../../html/account/index.html">My Account</a>
+                </div>
             </div>
-            <!-- ! My Account ! -->
-            <div class="nav-item">
-                <a href="../../html/account/index.html">My Account</a>
-            </div>
-        </div>
-
-        <!-- ? Bottom Nav - Grid Template 4 1fr ?  -->
-        <div class="bottom-nav">
-            <!-- ! Home ! -->
-            <div class="nav-item">
-                <a href="../../html/home/index.html">Home</a>
-            </div>
-            <!-- ! About ! -->
-            <div class="nav-item">
-                <a href="../../html/about/index.html">About</a>
-            </div>
-            <!-- ! Services ! -->
-            <div class="nav-item">
-                <a href="../../html/services/index.html">Services</a>
-            </div>
-            <!-- ! Contact ! -->
-            <div class="nav-item">
-                <a href="../../html/contact/index.html">Contact</a>
+    
+            <!-- ? Bottom Nav - Grid Template 4 1fr ?  -->
+            <div class="bottom-nav">
+                <!-- ! Home ! -->
+                <div class="nav-item">
+                    <a href="../../html/home/index.html">Home</a>
+                </div>
+                <!-- ! About ! -->
+                <div class="nav-item">
+                    <a href="../../html/about/index.html">About</a>
+                </div>
+                <!-- ! Services ! -->
+                <div class="nav-item">
+                    <a href="../../html/services/index.html">Services</a>
+                </div>
+                <!-- ! Contact ! -->
+                <div class="nav-item">
+                    <a href="../../html/contact/index.html">Contact</a>
+                </div>
             </div>
         </div>
     </header>
@@ -48,12 +50,12 @@
 
     <!-- // -->
     <!-- ? Body ? -->
-    <main>
+    <main class="shell">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="jumbotron">
-                        <h1>Welcome to our site!</h1>
+                        <h1>Welcome to our Site!</h1>
                         <p class="lead">This
                             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">site</a> is a work in progress.</p>
                         <p><a class="btn btn-primary btn-lg" href="../../html/about/index.html" role="button">Learn more</a></p>
