--- a/html/home/index.html
+++ b/html/home/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="../../styles/global/navbar.css">
     <link rel="stylesheet" href="../../styles/global/footer.css">
     <link rel="stylesheet" href="../../styles/global/body.css">
+    <link rel="stylesheet" href="../../styles/home/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -22,6 +23,9 @@
                 <!-- ! My Account ! -->
                 <div class="nav-item">
                     <a href="../../html/account/index.html">My Account</a>
+                    <div class="profile-picture">
+                        <img src="" alt="">
+                    </div>
                 </div>
             </div>
     
@@ -51,15 +55,40 @@
     <!-- // -->
     <!-- ? Body ? -->
     <main class="shell">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="jumbotron">
-                        <h1>Welcome to our Site!</h1>
-                        <p class="lead">This
-                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">site</a> is a work in progress.</p>
-                        <p><a class="btn btn-primary btn-lg" href="../../html/about/index.html" role="button">Learn more</a></p>
+        <div class="banner">
+            <div>
+                <div class="top-banner">
+                    <div class="banner-text">
+                        <h4>Welcome to CKD Helper</h4>
+                        <h1>Find information and use the calculator to help manage your health</h1>
                     </div>
+                </div>
+                <div class="bottom-banner">
+                    <a class="card-left" href="https://www.kidney.org/kidney-health" target="_blank" rel="noopener noreferrer">
+                        <div>
+                            <h2>Live Healthy</h2>
+                            <p>Find out more information about how you can live healthy</p>
+                        </div>
+                        <div title="arrow" class="arrow">
+                            <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M16.5734 10.0261C15.8663 9.17757 14.6051 9.06292 13.7566 9.77005C12.908 10.4772 12.7934 11.7383 13.5005 12.5869L16.5734 10.0261ZM19.5945 16.7756L21.1309 18.0559C21.749 17.3142 21.749 16.2369 21.1309 15.4952L19.5945 16.7756ZM13.5005 20.9643C12.7934 21.8128 12.908 23.0739 13.7566 23.7811C14.6051 24.4882 15.8663 24.3735 16.5734 23.525L13.5005 20.9643ZM13.5005 12.5869L18.0581 18.0559L21.1309 15.4952L16.5734 10.0261L13.5005 12.5869ZM18.0581 15.4952L13.5005 20.9643L16.5734 23.525L21.1309 18.0559L18.0581 15.4952ZM16.5 26.875C10.77 26.875 6.125 22.23 6.125 16.5H2.125C2.125 24.4391 8.56091 30.875 16.5 30.875V26.875ZM6.125 16.5C6.125 10.77 10.77 6.125 16.5 6.125V2.125C8.56091 2.125 2.125 8.56091 2.125 16.5H6.125ZM16.5 6.125C22.23 6.125 26.875 10.77 26.875 16.5H30.875C30.875 8.56091 24.4391 2.125 16.5 2.125V6.125ZM26.875 16.5C26.875 22.23 22.23 26.875 16.5 26.875V30.875C24.4391 30.875 30.875 24.4391 30.875 16.5H26.875Z" fill="#123524"/>
+                            </svg>
+                        </div>
+                    </a>
+                    <a class="card-right" href="../../html/services/index.html">
+                        <div>
+                            <h2>Calculator</h2>
+                            <p>Use our calculators to estimate GFR for adults or children</p>
+                        </div>
+                        <div title="arrow" class="arrow">
+                            <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M16.5734 10.0261C15.8663 9.17757 14.6051 9.06292 13.7566 9.77005C12.908 10.4772 12.7934 11.7383 13.5005 12.5869L16.5734 10.0261ZM19.5945 16.7756L21.1309 18.0559C21.749 17.3142 21.749 16.2369 21.1309 15.4952L19.5945 16.7756ZM13.5005 20.9643C12.7934 21.8128 12.908 23.0739 13.7566 23.7811C14.6051 24.4882 15.8663 24.3735 16.5734 23.525L13.5005 20.9643ZM13.5005 12.5869L18.0581 18.0559L21.1309 15.4952L16.5734 10.0261L13.5005 12.5869ZM18.0581 15.4952L13.5005 20.9643L16.5734 23.525L21.1309 18.0559L18.0581 15.4952ZM16.5 26.875C10.77 26.875 6.125 22.23 6.125 16.5H2.125C2.125 24.4391 8.56091 30.875 16.5 30.875V26.875ZM6.125 16.5C6.125 10.77 10.77 6.125 16.5 6.125V2.125C8.56091 2.125 2.125 8.56091 2.125 16.5H6.125ZM16.5 6.125C22.23 6.125 26.875 10.77 26.875 16.5H30.875C30.875 8.56091 24.4391 2.125 16.5 2.125V6.125ZM26.875 16.5C26.875 22.23 22.23 26.875 16.5 26.875V30.875C24.4391 30.875 30.875 24.4391 30.875 16.5H26.875Z" fill="#123524"/>
+                            </svg>
+                        </div>
+                    </a>
+                </div>
+                <div class="background-banner">
+                    <!-- <img src="https://placehold.co/1420x350" alt="Paris"> -->
                 </div>
             </div>
         </div>
