--- a/html/home/index.html
+++ b/html/home/index.html
@@ -1,6 +1,6 @@
 <head>
     <title id="title">Home</title>
-    <link rel="stylesheet" href="../../styles/global/navbar.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    <link rel="stylesheet" href="../../styles/global/navbar.css">
     <link rel="stylesheet" href="../../styles/global/footer.css">
     <link rel="stylesheet" href="../../styles/global/body.css">
     <link rel="stylesheet" href="../../styles/home/style.css">
@@ -32,20 +32,20 @@
             <!-- ? Bottom Nav - Grid Template 4 1fr ?  -->
             <div class="bottom-nav">
                 <!-- ! Home ! -->
-                <div class="nav-item">
+                <div class="nav-item" id="home">
                     <a href="../../html/home/index.html">Home</a>
                 </div>
                 <!-- ! About ! -->
-                <div class="nav-item">
+                <div class="nav-item" id="about">
                     <a href="../../html/about/index.html">About</a>
                 </div>
                 <!-- ! Services ! -->
-                <div class="nav-item">
-                    <a href="../../html/services/index.html">Services</a>
+                <div class="nav-item" id="calculator">
+                    <a href="../../html/services/calc/index.html">Calculator</a>
                 </div>
                 <!-- ! Contact ! -->
-                <div class="nav-item">
-                    <a href="../../html/contact/index.html">Contact</a>
+                <div class="nav-item" id="contact">
+                    <a href="https://www.nhs.uk/conditions/social-care-and-support-guide/" target="_blank" rel="noopener noreferrer">Contact</a>
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
                             </svg>
                         </div>
                     </a>
-                    <a class="card-right" href="../../html/services/index.html">
+                    <a class="card-right" href="../../html/services/calc/index.html">
                         <div>
                             <h2>Calculator</h2>
                             <p>Use our calculators to estimate GFR for adults or children</p>
