`Removed HTML files for about, contact and updated navigation links in home, services and calculator pages`

--- a/html/home/index.html
+++ b/html/home/index.html
@@ -14,7 +14,7 @@
     <!-- ? Navbar ? -->
     <header>
         <div>
-            <!-- ? Top Nav - Flex Space Between ? -->
+            <!-- ? Top Nav ? -->
             <div class="top-nav">
                 <!-- ! Logo ! -->
                 <div class="nav-logo">
@@ -29,7 +29,7 @@
                 </div>
             </div>
     
-            <!-- ? Bottom Nav - Grid Template 4 1fr ?  -->
+            <!-- ? Bottom Nav ?  -->
             <div class="bottom-nav">
                 <!-- ! Home ! -->
                 <div class="nav-item" id="home">
@@ -37,7 +37,7 @@
                 </div>
                 <!-- ! About ! -->
                 <div class="nav-item" id="about">
-                    <a href="../../html/about/index.html">About</a>
+                    <a href="https://www.nhs.uk/conditions/kidney-disease/">About</a>
                 </div>
                 <!-- ! Services ! -->
                 <div class="nav-item" id="calculator">
