--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -33,15 +33,15 @@
                 </div>
                 <!-- ! About ! -->
                 <div class="nav-item">
-                    <a href="../../html/about/index.html">About</a>
+                    <a href="https://www.nhs.uk/conditions/kidney-disease/">About</a>
                 </div>
                 <!-- ! Services ! -->
-                <div class="nav-item">
-                    <a href="../../html/services/index.html">Services</a>
+                <div class="nav-item" id="calculator">
+                    <a href="../../html/services/calc/index.html">Calculator</a>
                 </div>
                 <!-- ! Contact ! -->
-                <div class="nav-item">
-                    <a href="../../html/contact/index.html">Contact</a>
+                <div class="nav-item" id="contact">
+                    <a href="https://www.nhs.uk/conditions/social-care-and-support-guide/" target="_blank" rel="noopener noreferrer">Contact</a>
                 </div>
             </div>
         </div>
