`Updated navbar links and styles across multiple HTML files and CSS files`

--- a/html/home/index.html
+++ b/html/home/index.html
@@ -14,15 +14,14 @@
     <!-- ? Navbar ? -->
     <header>
         <div>
-            <!-- ? Top Nav ? -->
             <div class="top-nav">
                 <!-- ! Logo ! -->
-                <div class="nav-logo">
+                <a class="nav-logo" href="../home/index.html" title="Home">
                     <img src="" alt="">
-                </div>
+                </a>
                 <!-- ! My Account ! -->
                 <div class="nav-item">
-                    <a href="../../html/account/index.html">My Account</a>
+                    <a href="../account/index.html">My Account</a>
                     <div class="profile-picture">
                         <img src="" alt="">
                     </div>
@@ -33,7 +32,7 @@
             <div class="bottom-nav">
                 <!-- ! Home ! -->
                 <div class="nav-item" id="home">
-                    <a href="../../html/home/index.html">Home</a>
+                    <a href="../home/index.html">Home</a>
                 </div>
                 <!-- ! About ! -->
                 <div class="nav-item" id="about">
@@ -41,7 +40,7 @@
                 </div>
                 <!-- ! Services ! -->
                 <div class="nav-item" id="calculator">
-                    <a href="../../html/services/calc/index.html">Calculator</a>
+                    <a href="../services/calc/index.html">Calculator</a>
                 </div>
                 <!-- ! Contact ! -->
                 <div class="nav-item" id="contact">
