--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -1,8 +1,8 @@
 <head>
-    <title id="title">Home</title>
-    <link rel="stylesheet" href="../../styles/global/navbar.css">
-    <link rel="stylesheet" href="../../styles/global/footer.css">
-    <link rel="stylesheet" href="../../styles/global/body.css">
+    <title id="title">Calculator</title>
+    <link rel="stylesheet" href="../../../styles/global/navbar.css">
+    <link rel="stylesheet" href="../../../styles/global/footer.css">
+    <link rel="stylesheet" href="../../../styles/global/body.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -16,12 +16,12 @@
             <!-- ? Top Nav - Flex Space Between ? -->
             <div class="top-nav">
                 <!-- ! Logo ! -->
-                <div class="nav-logo">
+                <a class="nav-logo" href="../../home/index.html" title="Home">
                     <img src="" alt="">
-                </div>
+                </a>
                 <!-- ! My Account ! -->
                 <div class="nav-item">
-                    <a href="../../html/account/index.html">My Account</a>
+                    <a href="../../account/index.html">My Account</a>
                 </div>
             </div>
     
@@ -29,7 +29,7 @@
             <div class="bottom-nav">
                 <!-- ! Home ! -->
                 <div class="nav-item">
-                    <a href="../../html/home/index.html">Home</a>
+                    <a href="../../home/index.html">Home</a>
                 </div>
                 <!-- ! About ! -->
                 <div class="nav-item">
@@ -37,7 +37,7 @@
                 </div>
                 <!-- ! Services ! -->
                 <div class="nav-item" id="calculator">
-                    <a href="../../html/services/calc/index.html">Calculator</a>
+                    <a href="../../services/calc/index.html">Calculator</a>
                 </div>
                 <!-- ! Contact ! -->
                 <div class="nav-item" id="contact">
@@ -58,7 +58,7 @@
                         <h1>Welcome to the Calculator!</h1>
                         <p class="lead">This
                             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">site</a> is a work in progress.</p>
-                        <p><a class="btn btn-primary btn-lg" href="../../html/about/index.html" role="button">Learn more</a></p>
+                        <p><a class="btn btn-primary btn-lg" href="../../about/index.html" role="button">Learn more</a></p>
                     </div>
                 </div>
             </div>
