--- a/html/account/index.html
+++ b/html/account/index.html
@@ -1,9 +1,9 @@
 <head>
     <title id="title">Home</title>
-    <link rel="stylesheet" href="../../styles/global/navbar.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    <link rel="stylesheet" href="../../styles/global/navbar.css">
     <link rel="stylesheet" href="../../styles/global/footer.css">
     <link rel="stylesheet" href="../../styles/global/body.css">
-    <link rel="stylesheet" href="../../styles/calc/style.css">
+    <link rel="stylesheet" href="../../styles/home/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -14,31 +14,33 @@
     <!-- ? Navbar ? -->
     <header>
         <div>
-            <!-- ? Top Nav - Flex Space Between ? -->
             <div class="top-nav">
                 <!-- ! Logo ! -->
-                <div class="nav-logo">
+                <a class="nav-logo" href="../home/index.html" title="Home">
                     <img src="" alt="">
-                </div>
+                </a>
                 <!-- ! My Account ! -->
                 <div class="nav-item">
-                    <a href="../../html/account/index.html">My Account</a>
+                    <a href="../account/index.html">My Account</a>
+                    <div class="profile-picture">
+                        <img src="" alt="">
+                    </div>
                 </div>
             </div>
     
-            <!-- ? Bottom Nav - Grid Template 4 1fr ?  -->
+            <!-- ? Bottom Nav ?  -->
             <div class="bottom-nav">
                 <!-- ! Home ! -->
-                <div class="nav-item">
-                    <a href="../../html/home/index.html">Home</a>
+                <div class="nav-item" id="home">
+                    <a href="../home/index.html">Home</a>
                 </div>
                 <!-- ! About ! -->
-                <div class="nav-item">
+                <div class="nav-item" id="about">
                     <a href="https://www.nhs.uk/conditions/kidney-disease/">About</a>
                 </div>
                 <!-- ! Services ! -->
                 <div class="nav-item" id="calculator">
-                    <a href="../../html/services/calc/index.html">Calculator</a>
+                    <a href="../services/calc/index.html">Calculator</a>
                 </div>
                 <!-- ! Contact ! -->
                 <div class="nav-item" id="contact">
@@ -52,27 +54,7 @@
     <!-- // -->
     <!-- ? Body ? -->
     <main class="shell">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="jumbotron">
-                        <h1>Welcome to Services!</h1>
-                        <p class="lead">This
-                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">site</a> is a work in progress.</p>
-                        <p><a class="btn btn-primary btn-lg" href="../../html/about/index.html" role="button">Learn more</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card-container">
-            <div class="card">
-                <img src="https://placehold.co/128x64" alt="Avatar">
-                <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
-            </div>
-        </div>
+        
     </main>
     <!-- // -->
 
