--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -13,31 +13,33 @@
     <!-- ? Navbar ? -->
     <header>
         <div>
-            <!-- ? Top Nav - Flex Space Between ? -->
             <div class="top-nav">
                 <!-- ! Logo ! -->
-                <a class="nav-logo" href="../../home/index.html" title="Home">
+                <a class="nav-logo" href="../home/index.html" title="Home">
                     <img src="" alt="">
                 </a>
                 <!-- ! My Account ! -->
                 <div class="nav-item">
-                    <a href="../../account/index.html">My Account</a>
+                    <a href="../account/index.html">My Account</a>
+                    <div class="profile-picture">
+                        <img src="" alt="">
+                    </div>
                 </div>
             </div>
     
-            <!-- ? Bottom Nav - Grid Template 4 1fr ?  -->
+            <!-- ? Bottom Nav ?  -->
             <div class="bottom-nav">
                 <!-- ! Home ! -->
-                <div class="nav-item">
-                    <a href="../../home/index.html">Home</a>
+                <div class="nav-item" id="home">
+                    <a href="../home/index.html">Home</a>
                 </div>
                 <!-- ! About ! -->
-                <div class="nav-item">
+                <div class="nav-item" id="about">
                     <a href="https://www.nhs.uk/conditions/kidney-disease/">About</a>
                 </div>
                 <!-- ! Services ! -->
                 <div class="nav-item" id="calculator">
-                    <a href="../../services/calc/index.html">Calculator</a>
+                    <a href="../services/calc/index.html">Calculator</a>
                 </div>
                 <!-- ! Contact ! -->
                 <div class="nav-item" id="contact">
