--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -20,7 +20,7 @@
                 </a>
                 <!-- ! My Account ! -->
                 <div class="nav-item">
-                    <a href="../account/index.html">My Account</a>
+                    <a href="../../account/index.html">My Account</a>
                     <div class="profile-picture">
                         <img src="" alt="">
                     </div>
@@ -31,7 +31,7 @@
             <div class="bottom-nav">
                 <!-- ! Home ! -->
                 <div class="nav-item" id="home">
-                    <a href="../home/index.html">Home</a>
+                    <a href="../../home/index.html">Home</a>
                 </div>
                 <!-- ! About ! -->
                 <div class="nav-item" id="about">
@@ -39,7 +39,7 @@
                 </div>
                 <!-- ! Services ! -->
                 <div class="nav-item" id="calculator">
-                    <a href="../services/calc/index.html">Calculator</a>
+                    <a href="../../services/calc/index.html">Calculator</a>
                 </div>
                 <!-- ! Contact ! -->
                 <div class="nav-item" id="contact">
