`Added links to kidney health resources, updated navigation and layout in multiple HTML files, and modified CSS styles to accommodate new content.`

--- a/html/home/index.html
+++ b/html/home/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <!-- ! About ! -->
                 <div class="nav-item" id="about">
-                    <a href="https://www.nhs.uk/conditions/kidney-disease/">About</a>
+                    <a href="https://www.nhs.uk/conditions/kidney-disease/" target="_blank" rel="noopener noreferrer">About</a>
                 </div>
                 <!-- ! Services ! -->
                 <div class="nav-item" id="calculator">
@@ -88,6 +88,71 @@
                 </div>
                 <div class="background-banner">
                     <!-- <img src="https://placehold.co/1420x350" alt="Paris"> -->
+                </div>
+            </div>
+        </div>
+        <div class="content-container">
+            <div>
+                <div class="title-content">
+                    <h2>Information about Kidney Health</h2>
+                    <p class="dim">Provided by National Kidney Foundation</p>
+                </div>
+                <div class="cards">
+                    <div class="card-container">
+                        <div class="card-image">
+                            <img src="https://placehold.co/122x248" alt="Kidney Health">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">Understand Kidney Health</h3>
+                            <ul class="card-links">
+                                <li><a class="a-links-1" href="https://www.kidney.org/kidney-health" target="_blank" rel="noopener noreferrer">Kidney and Health</a></li>
+                                <li><a class="a-links-1" href="https://www.kidney.org/atoz/content/howkidneyswork" target="_blank" rel="noopener noreferrer">How kidneys work</a></li>
+                                <li><a class="a-links-1" href="https://www.kidney.org/atoz/content/about-chronic-kidney-disease" target="_blank" rel="noopener noreferrer">About Kidney Disease</a></li>
+                                <li><a class="a-links-1" href="https://www.kidney.org/kidney-topics/stages-chronic-kidney-disease-ckd" target="_blank" rel="noopener noreferrer">Newly Diagnosed? Start Here</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-image">
+                            <img src="https://placehold.co/122x248" alt="Kidney Health">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">Risk Factors & Causes</h3>
+                            <ul class="card-links">
+                                <li><a class="a-links-1" href="https://www.kidney.org/news/ekidney/august14/10_Signs_You_May_Have_Kidney_Disease" target="_blank" rel="noopener noreferrer">Signs of kidney disease</a></li>
+                                <li><a class="a-links-1" href="https://www.kidney.org/atoz/content/about-chronic-kidney-disease" target="_blank" rel="noopener noreferrer">Causes of kidney disease</a></li>
+                                <li><a class="a-links-1" href="https://www.kidney.org/atoz/content/obesity" target="_blank" rel="noopener noreferrer">Obesity</a></li>
+                                <li><a class="a-links-1" href="https://www.kidney.org/atoz/atozTopic_HighBloodPressure" target="_blank" rel="noopener noreferrer">High Blood Pressure</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-image">
+                            <img src="https://placehold.co/122x248" alt="Kidney Health">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">Kidney Health Testing</h3>
+                            <ul class="card-links">
+                                <li><a class="a-links-1" href="https://www.kidney.org/atoz/content/gfr" target="_blank" rel="noopener noreferrer">Glomerular Filtration Rate (GFR)</a></li>
+                                <li><a class="a-links-1" href="https://www.kidney.org/atoz/content/know-your-kidney-numbers-two-simple-tests" target="_blank" rel="noopener noreferrer">Albumin-to-Creatinine Ratio (ACR)</a></li>
+                                <li><a class="a-links-1" href="https://www.kidney.org/atoz/content/understanding-your-lab-values" target="_blank" rel="noopener noreferrer">Understanding your lab values</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-image">
+                            <img src="https://placehold.co/122x248" alt="Kidney Health">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">Kidney Stones</h3>
+                            <ul class="card-links">
+                                <li><a class="a-links-1" href="https://www.kidney.org/kidney-health/kidney-stones" target="_blank" rel="noopener noreferrer">What should you know</a></li>
+                                <li><a class="a-links-1" href="https://www.kidney.org/atoz/content/kidneystones" target="_blank" rel="noopener noreferrer">Symptoms and Causes</a></li>
+                                <li><a class="a-links-1" href="https://www.kidney.org/atoz/content/kidneystones_prevent" target="_blank" rel="noopener noreferrer">Treatment and Preventions</a></li>
+                                <li><a class="a-links-1" href="https://www.kidney.org/atoz/content/diet" target="_blank" rel="noopener noreferrer">Diet</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
