--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <!-- ! About ! -->
                 <div class="nav-item" id="about">
-                    <a href="https://www.nhs.uk/conditions/kidney-disease/">About</a>
+                    <a href="https://www.nhs.uk/conditions/kidney-disease/" target="_blank" rel="noopener noreferrer">About</a>
                 </div>
                 <!-- ! Services ! -->
                 <div class="nav-item" id="calculator">
