`Refactor logo and banner in home page: replace image with div, update CSS styles`

--- a/html/home/index.html
+++ b/html/home/index.html
@@ -17,7 +17,7 @@
             <div class="top-nav">
                 <!-- ! Logo ! -->
                 <a class="nav-logo" href="../home/index.html" title="Home">
-                    <img src="" alt="">
+                    <div class="header-logo"></div>
                 </a>
                 <!-- ! My Account ! -->
                 <div class="nav-item">
@@ -27,7 +27,7 @@
                     </div>
                 </div>
             </div>
-    
+
             <!-- ? Bottom Nav ?  -->
             <div class="bottom-nav">
                 <!-- ! Home ! -->
@@ -87,7 +87,7 @@
                     </a>
                 </div>
                 <div class="background-banner">
-                    <!-- <img src="https://placehold.co/1420x350" alt="Paris"> -->
+                    <!-- <img src="../../images/home/banner/banner.jpeg" alt="banner"> -->
                 </div>
             </div>
         </div>
