`Update home page images and styles for consistency`

--- a/html/home/index.html
+++ b/html/home/index.html
@@ -100,7 +100,7 @@
                 <div class="cards">
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="https://placehold.co/122x248" alt="Kidney Health">
+                            <img src="../../images/home/card/Understand Kindey Health.png" alt="Understand Kidney Health">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Understand Kidney Health</h3>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="https://placehold.co/122x248" alt="Kidney Health">
+                            <img src="../../images/home/card/Risk Factors.png" alt="Risk Factors & Causes">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Risk Factors & Causes</h3>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="https://placehold.co/122x248" alt="Kidney Health">
+                            <img src="../../images/home/card/Kidney Health Testing.png" alt="Kidney Health Testing">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Kidney Health Testing</h3>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="https://placehold.co/122x248" alt="Kidney Health">
+                            <img src="../../images/home/card/Kidney Stones.png" alt="Kidney Stones">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Kidney Stones</h3>
