`Added calculator functionality and related styles, updated navigation and footer styles, and made various minor changes to HTML and CSS files.`

--- a/html/home/index.html
+++ b/html/home/index.html
@@ -20,12 +20,14 @@
                     <div class="header-logo"></div>
                 </a>
                 <!-- ! My Account ! -->
-                <div class="nav-item">
-                    <a href="../account/index.html">My Account</a>
+                <a href="../account/index.html" class="nav-item">
+                    <div>My Account</div>
                     <div class="profile-picture">
-                        <img src="" alt="">
+                        <svg class="profile-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24px" height="24px">
+                            <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+                        </svg>
                     </div>
-                </div>
+                </a>
             </div>
 
             <!-- ? Bottom Nav ?  -->
@@ -100,7 +102,7 @@
                 <div class="cards">
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="../../images/home/card/Understand Kindey Health.png" alt="Understand Kidney Health">
+                            <img src="/images/home/card/Understand Kindey Health.png" alt="Understand Kidney Health">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Understand Kidney Health</h3>
@@ -114,7 +116,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="../../images/home/card/Risk Factors.png" alt="Risk Factors & Causes">
+                            <img src="/images/home/card/Risk Factors.png" alt="Risk Factors & Causes">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Risk Factors & Causes</h3>
@@ -128,7 +130,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="../../images/home/card/Kidney Health Testing.png" alt="Kidney Health Testing">
+                            <img src="/images/home/card/Kidney Health Testing.png" alt="Kidney Health Testing">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Kidney Health Testing</h3>
@@ -141,7 +143,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="../../images/home/card/Kidney Stones.png" alt="Kidney Stones">
+                            <img src="/images/home/card/Kidney Stones.png" alt="Kidney Stones">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Kidney Stones</h3>
