--- a/html/account/index.html
+++ b/html/account/index.html
@@ -17,13 +17,15 @@
             <div class="top-nav">
                 <!-- ! Logo ! -->
                 <a class="nav-logo" href="../home/index.html" title="Home">
-                    <img src="" alt="">
+                    <div class="header-logo"></div>
                 </a>
                 <!-- ! My Account ! -->
                 <div class="nav-item">
                     <a href="../account/index.html">My Account</a>
                     <div class="profile-picture">
-                        <img src="" alt="">
+                        <svg class="profile-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24px" height="24px">
+                            <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+                        </svg>
                     </div>
                 </div>
             </div>
