--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -1,8 +1,11 @@
 <head>
     <title id="title">Calculator</title>
-    <link rel="stylesheet" href="../../../styles/global/navbar.css">
-    <link rel="stylesheet" href="../../../styles/global/footer.css">
-    <link rel="stylesheet" href="../../../styles/global/body.css">
+    <meta charset="UTF-8">
+    <link data-vue-tag="ssr" rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon.ico">
+    <link rel="stylesheet" href="/styles/global/navbar.css">
+    <link rel="stylesheet" href="/styles/global/footer.css">
+    <link rel="stylesheet" href="/styles/global/body.css">
+    <link rel="stylesheet" href="/styles/calc/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -15,14 +18,16 @@
         <div>
             <div class="top-nav">
                 <!-- ! Logo ! -->
-                <a class="nav-logo" href="../home/index.html" title="Home">
-                    <img src="" alt="">
+                <a class="nav-logo" href="/html/home/index.html" title="Home">
+                    <div class="header-logo"></div>
                 </a>
                 <!-- ! My Account ! -->
                 <div class="nav-item">
                     <a href="../../account/index.html">My Account</a>
                     <div class="profile-picture">
-                        <img src="" alt="">
+                        <svg class="profile-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24px" height="24px">
+                            <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+                        </svg>
                     </div>
                 </div>
             </div>
@@ -53,18 +58,96 @@
     <!-- // -->
     <!-- ? Body ? -->
     <main class="shell">
+        <br>
+        <br>
+        <br>
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="jumbotron">
-                        <h1>Welcome to the Calculator!</h1>
-                        <p class="lead">This
-                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">site</a> is a work in progress.</p>
-                        <p><a class="btn btn-primary btn-lg" href="../../about/index.html" role="button">Learn more</a></p>
+            <div class="center-container">
+                <div class="top-info">
+                    <div class="starter">
+                        <h1>Calculate Your eGFR</h1>
+                        <p>Use this service to:</p>
+                        <ul>
+                            <li>Check the eGFR of an adult aged 18 and over</li>
+                            <li>Get information about what to do next</li>
+                        </ul>
+                    </div>
+                    <br>
+                    <div class="extra-to">
+                        <p>Glomerular filtration rate (GFR) is the best overall index of kidney function. Normal GFR varies according to age, sex, and body size, and declines with age.</p>
+                        <a data-target="start-now" id="scroll"><strong>Scroll to Calculator</strong></a>
                     </div>
                 </div>
+                <br>
+                <br>
+                <div class="how-to-use">
+                    <h1>How to use this tool:</h1>
+                    <p>This tool is to be used to help calculate your eGFR. You should not use this tool if you, or the person you're using it for:</p>
+                    <ul>
+                        <li>Are under 18 years old</li>
+                        <li>Are pregnant</li>
+                        <li>Are undergoing dialysis</li>
+                        <li>Have an amputation or significant limb loss</li>
+                        <li>Have rapidly changing kidney function (e.g., acute kidney injury)</li>
+                        <li>Are taking medications that significantly affect muscle mass or creatinine levels</li>
+                        <li>Have unusual muscle mass (e.g., bodybuilders, those with muscle-wasting diseases)</li>
+                        <li>Are malnourished or have significant fluid retention (e.g., edema or ascites)</li>
+                        <li>Have had a recent kidney transplant</li>
+                    </ul>
+                </div>
+                <br>
+                <br>
+                <div class="what-you-will-need">
+                    <h1>What you will need:</h1>
+                    <p>To use this calculator, you will need to know:</p>
+                    <ul>
+                        <li>Creatinine Level:
+                            <ul>
+                                <li>A recent serum creatinine result from a blood test (measured in mg/dL or µmol/L)</li>
+                            </ul>
+                        </li>
+                        <li>Age:
+                            <ul>
+                                <li>The person's age (in years)</li>
+                            </ul>
+                        </li>
+                        <li>Gender:
+                            <ul>
+                                <li>The person's biological sex (male or female)</li>
+                            </ul>
+                        </li>
+                        <li>Race/Ethnicity (if applicable):
+                            <ul>
+                                <li>Some equations (e.g., MDRD or CKD-EPI) require this information</li>
+                            </ul>
+                        </li>
+                        <li>Height and Weight (optional):
+                            <ul>
+                                <li>Needed if the calculation requires body surface area (BSA) adjustments</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <br>
+                <br>
+                <div class="extra-info">
+                    <h1>Extra Information</h1>
+                    <ul>
+                        <li>If values for cystatin C and/or BUN are not entered, the calculator will generate GFR estimates using the creatinine-based “Bedside Schwartz” equation only (currently considered the best method for estimating GFR in children)</li>
+                        <br>
+                        <li>The cystatin C values are not corrected for IFCC calibration. IFCC calibrated values should be divided by 1.17 before entered as input. (Schwartz et al. Pediatr Nephrol 35:279-285, 2020)</li>
+                        <br>
+                        <li>These equations are only valid with standardized serum creatinine methods traceable to IDMS.</li>
+                    </ul>
+                </div>
+                <br>
+                <br>
+                <button class="start-now" title="start calculation" id="start">Start Now</></a>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
     </main>
     <!-- // -->
 
@@ -125,5 +208,11 @@
             </div>
         </div>
     </footer>
+    <!-- // -->
+    
+    <!-- // -->
+    <!-- ? Scripts ? -->
+    <script src="/js/service/calc/questionTracking.js" type="text/javascript"></script>
+    <script src="/js/service/calc/scrollTo.js" type="text/javascript"></script>
     <!-- // -->
 </body>
