`Refactor HTML and JavaScript files for calc service: update script tags, remove deleted files`

--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -212,7 +212,7 @@
     
     <!-- // -->
     <!-- ? Scripts ? -->
-    <script src="/js/service/calc/questionTracking.js" type="text/javascript"></script>
-    <script src="/js/service/calc/scrollTo.js" type="text/javascript"></script>
+    <script src="/js/services/calc/questionTracking.js" type="text/javascript" defer async></script>
+    <script src="/js/services/calc/scrollTo.js" type="text/javascript" defer async></script>
     <!-- // -->
 </body>
