`Refactored code for services calculator, updated HTML, CSS, and JavaScript files`

--- a/js/services/calc/html/question1.html
+++ b/js/services/calc/html/question1.html
@@ -1,6 +1,18 @@
-<div>
-    <h1>Question 1</h1>
-    <p>What is the capital of France?</p>
-    <input title="input" type="text" id="answer1" />
-    <button id="submit1">Submit</button>
+<br>
+<br>
+<br>
+<div class="container">
+    <a class="getback" id="prev"><strong><</strong> Go Back</a>
+    <br>
+    <br>
+    <h1><strong>Are you 18 or over?</strong></h1>
+    <br>
+    <p>This is to give an accurate eGFR results for adults aged 18 and over</p>
+    <br>
+    <br>
+    <!-- 2 buttons: "Yes" and "No, go to pediatric calculator" -->
+    <div>
+        <button class="button_gl" id="next" data-target="question2">Yes</button>
+        <button class="button_gl" id="under-age">No, go to pediatric calculator</button>
+    </div>
 </div>
