--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <br>
                 <br>
-                <button class="start-now" title="start calculation" id="start">Start Now</></a>
+                <button class="start-now button_gl scroll-clicker" title="start calculation" id="start-now" data-target="bottom-nav">Start Now</button></main>
             </div>
         </div>
         <br>
@@ -202,8 +202,7 @@
                         <!-- Brings to guthub repo -->
                         <li><a title="github" class="github" href="#"><i class="fa fa-github"></i></a></li>
                         <!-- Brings to a list of our linkedin profiles -->
-                        <li><a title="linkedin" class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
+                     </ul>
                 </div>
             </div>
         </div>
@@ -212,7 +211,7 @@
     
     <!-- // -->
     <!-- ? Scripts ? -->
-    <script src="/js/services/calc/questionTracking.js" type="text/javascript" defer async></script>
-    <script src="/js/services/calc/scrollTo.js" type="text/javascript" defer async></script>
+    <script src="/js/services/calc/questionTracking.js" type="text/javascript"></script>
+    <script src="/js/services/calc/scrollTo.js" type="text/javascript"></script>
     <!-- // -->
 </body>
