`Update relative paths in HTML, CSS, and JavaScript files to use ../../ instead of /`

--- a/html/home/index.html
+++ b/html/home/index.html
@@ -102,7 +102,7 @@
                 <div class="cards">
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="/images/home/card/Understand Kindey Health.png" alt="Understand Kidney Health">
+                            <img src="../../images/home/card/Understand Kindey Health.png" alt="Understand Kidney Health">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Understand Kidney Health</h3>
@@ -116,7 +116,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="/images/home/card/Risk Factors.png" alt="Risk Factors & Causes">
+                            <img src="../../images/home/card/Risk Factors.png" alt="Risk Factors & Causes">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Risk Factors & Causes</h3>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="/images/home/card/Kidney Health Testing.png" alt="Kidney Health Testing">
+                            <img src="../../images/home/card/Kidney Health Testing.png" alt="Kidney Health Testing">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Kidney Health Testing</h3>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card-image">
-                            <img src="/images/home/card/Kidney Stones.png" alt="Kidney Stones">
+                            <img src="../../images/home/card/Kidney Stones.png" alt="Kidney Stones">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title">Kidney Stones</h3>
