--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -2,10 +2,10 @@
     <title id="title">Calculator</title>
     <meta charset="UTF-8">
     <link data-vue-tag="ssr" rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon.ico">
-    <link rel="stylesheet" href="/styles/global/navbar.css">
-    <link rel="stylesheet" href="/styles/global/footer.css">
-    <link rel="stylesheet" href="/styles/global/body.css">
-    <link rel="stylesheet" href="/styles/calc/style.css">
+    <link rel="stylesheet" href="../../../styles/global/navbar.css">
+    <link rel="stylesheet" href="../../../styles/global/footer.css">
+    <link rel="stylesheet" href="../../../styles/global/body.css">
+    <link rel="stylesheet" href="../../../styles/calc/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -18,7 +18,7 @@
         <div>
             <div class="top-nav">
                 <!-- ! Logo ! -->
-                <a class="nav-logo" href="/html/home/index.html" title="Home">
+                <a class="nav-logo" href="../../home/index.html" title="Home">
                     <div class="header-logo"></div>
                 </a>
                 <!-- ! My Account ! -->
@@ -211,7 +211,7 @@
     
     <!-- // -->
     <!-- ? Scripts ? -->
-    <script src="/js/services/calc/questionTracking.js" type="text/javascript"></script>
-    <script src="/js/services/calc/scrollTo.js" type="text/javascript"></script>
+    <script src="../../../js/services/calc/questionTracking.js" type="text/javascript"></script>
+    <script src="../../../js/services/calc/scrollTo.js" type="text/javascript"></script>
     <!-- // -->
 </body>
