--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -1,7 +1,7 @@
 <head>
     <title id="title">Calculator</title>
     <meta charset="UTF-8">
-    <link data-vue-tag="ssr" rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon.ico">
+    <link data-vue-tag="ssr" rel="icon" type="image/png" sizes="96x96" href="../../../images/favicon/favicon.ico">
     <link rel="stylesheet" href="../../../styles/global/navbar.css">
     <link rel="stylesheet" href="../../../styles/global/footer.css">
     <link rel="stylesheet" href="../../../styles/global/body.css">
