`Refactor question tracking and results display in kidney function calculator`

--- a/js/services/calc/html/question2.html
+++ b/js/services/calc/html/question2.html
@@ -1,7 +1,17 @@
-<div>
-    <button class="btn btn-secondary" id="prev">Go Back</button>
-    <h1>Question 2</h1>
-    <p>What is the average number of hours spent on social media per day?</p>
-    <input title="input" type="text" id="answer2" />
-    <button id="next" data-target="question3">Submit</button>
+<br>
+<br>
+<br>
+<div class="container">
+    <a class="getback" id="prev"><strong><</strong> Go Back</a>
+    <br>
+    <br>
+    <h1><strong>Are you 18 or over?</strong></h1>
+    <br>
+    <p>What is your age (in years)</p>
+    <br>
+    <br>
+    <input class="q_input" type="number" id="answer" name="age" placeholder="Enter your age">
+    <div>
+        <button class="button_gl" id="next" data-target="question3">Enter</button>
+    </div>
 </div>
