--- a/js/services/calc/html/question3.html
+++ b/js/services/calc/html/question3.html
@@ -1,7 +1,17 @@
-<div>
-    <button class="btn btn-secondary" id="prev">Go Back</button>
-    <h1>Question 3</h1>
-    <p>What is the value of x in the equation 2x + 5 = 11?</p>
-    <input title="input" type="text" id="answer3" />
-    <button id="results">Submit</button>
+<br>
+<br>
+<br>
+<div class="container">
+    <a class="getback" id="prev"><strong><</strong> Go Back</a>
+    <br>
+    <br>
+    <h1><strong>What is your gender?</strong></h1>
+    <br>
+    <p>Gender is important because kidney function equations differ slightly between males and females</p>
+    <br>
+    <br>
+    <div>
+        <button class="button_gl q3_answer" id="next" data-target="question4" data-answer="male">Male</button>
+        <button class="button_gl q3_answer" id="next" data-target="question4" data-answer="female">Female</button>
+    </div>
 </div>
