--- a/js/services/calc/html/results.html
+++ b/js/services/calc/html/results.html
@@ -1,32 +1,16 @@
-<div>
-    <button class="btn btn-secondary" id="prev-1">Go Back</button>
+<br>
+<br>
+<br>
+<div class="container">
+    <a class="getback" id="prev-1"><strong><</strong> Go Back</a>
+    <br>
+    <br>
     <h1>Results</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Rank</th>
-                <th>Player</th>
-                <th>Score</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Jay</td>
-                <td>100</td>
-            </tr>
-            <tr>
-                <!-- // -->
-                <td>2</td>
-                <td>Kyle</td>
-                <td>150</td>
-            </tr>
-            <tr>
-                <!-- // -->
-                <td>3</td>
-                <td>Bartek</td>
-                <td>200</td>
-            </tr>
-        </tbody>
-    </table>
+    <div id="results-container">
+        <br>
+        <!-- User's answers will be inserted here -->
+    </div>
+    <br>
+    <br>
+    <button class="button_gl" id="start-over" data-target="start-over">Start Again?</button>
 </div>
