`Added functionality to track user answers, validate input, and display results based on user input.`

--- a/js/services/calc/html/question2.html
+++ b/js/services/calc/html/question2.html
@@ -9,9 +9,8 @@
     <br>
     <p>What is your age (in years)</p>
     <br>
-    <br>
-    <input class="q_input" type="number" id="answer" name="age" placeholder="Enter your age">
+    <input class="q_input q_age" type="number" id="answer" name="age" placeholder="Enter your age" required>
     <div>
-        <button class="button_gl" id="next" data-target="question3">Enter</button>
+        <button class="button_gl" id="next" type="submit" data-target="question3">Enter</button>
     </div>
 </div>
