`feat: Update eGFR calculation and display in calc service`
`diff` includes changes to:

* `index.html` in `html/services/calc` directory
* `results.html` in `js/services/calc/html` directory

--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -209,7 +209,8 @@
     
     <!-- // -->
     <!-- ? Scripts ? -->
-    <script src="../../../js/services/calc/questionTracking.js" type="text/javascript"></script>
+    <script type="module" src="../../../js/services/calc/questionTracking.js" type="text/javascript"></script>
+    <script type="module" src="../../../js/services/calc/eGFRCalc.js"></script>
     <script src="../../../js/services/calc/scrollTo.js" type="text/javascript"></script>
     <!-- // -->
 </body>
