--- a/js/services/calc/html/results.html
+++ b/js/services/calc/html/results.html
@@ -9,20 +9,24 @@
     <h1><strong>Results</strong></h1>
     <br>
     <p>Your estimated eGFR is <span id="egfr-value">XX</span> mL/min/1.73m²</p>
-
+    <br>
     <!-- eGFR Bar -->
     <div id="egfr-bar">
-        <div id="egfr-indicator"></div>
+        <div id="egfr-marker">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" height="18px" width="18px" version="1.1" id="Capa_1" viewBox="0 0 490 490" xml:space="preserve">
+                <polygon points="456.851,0 245,212.564 33.149,0 0.708,32.337 212.669,245.004 0.708,457.678 33.149,490 245,277.443 456.851,490   489.292,457.678 277.331,245.004 489.292,32.337 "/>
+            </svg>
+        </div>
     </div>
-
+    <br>
     <!-- Legend -->
     <ul id="egfr-legend">
-        <li><span class="color-box normal"></span> Normal or High Function</li>
-        <li><span class="color-box mild"></span> Mildly Decreased Function</li>
-        <li><span class="color-box moderate"></span> Mild to Moderate Decrease</li>
-        <li><span class="color-box severe"></span> Moderate to Severe Decrease</li>
-        <li><span class="color-box very-severe"></span> Severe Decrease</li>
-        <li><span class="color-box failure"></span> Kidney Failure</li>
+        <li><div class="color-box normal"></div> Normal or High Function</li>
+        <li><div class="color-box mild"></div> Mildly Decreased Function</li>
+        <li><div class="color-box moderate"></div> Mild to Moderate Decrease</li>
+        <li><div class="color-box severe"></div> Moderate to Severe Decrease</li>
+        <li><div class="color-box very-severe"></div> Severe Decrease</li>
+        <li><div class="color-box failure"></div> Kidney Failure</li>
     </ul>
 
     <br>
@@ -31,7 +35,8 @@
     <h4><strong>What your result means</strong></h4>
     <br>
     <ul id="result-meaning">
-        <li><strong>90+ mL/min/1.73m²</strong> (Normal or High Function)
+        <li
+        ><strong>90+ mL/min/1.73m²</strong> (Normal or High Function)
             <p>What it means: Your kidneys are functioning normally. No signs of chronic kidney disease (CKD).</p>
             <p>Next steps: Continue maintaining a healthy lifestyle. Regular check-ups are recommended if you’re at risk of kidney disease.</p>
         </li>
